artifacts/workloads/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-canary
  namespace: test
  labels:
    app: podinfo-canary
spec:
  type: ClusterIP
  selector:
    app: podinfo-canary
  ports:
  - name: http
    port: 9898
    protocol: TCP
    targetPort: http
