artifacts/workloads/primary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-primary
  namespace: test
  labels:
    app: podinfo-primary
spec:
  type: ClusterIP
  selector:
    app: podinfo-primary
  ports:
  - name: http
    port: 9898
    protocol: TCP
    targetPort: http
