artifacts/workloads/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
  namespace: test
  labels:
    app: podinfo
spec:
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  - mesh
  hosts:
  - podinfo.istio.weavedx.com
  - podinfo
  http:
  - route:
    - destination:
        host: podinfo-primary
        port:
          number: 9898
      weight: 100
    - destination:
        host: podinfo
        port:
          number: 9898
      weight: 0
    timeout: 10s
    retries:
      attempts: 3
      perTryTimeout: 2s
